# TriageCore

./: .bandit  .gitignore  AGENTS.md  BUILD_WEEK_SCOPE.md  CONTRIBUTING.md  README.md  README_REVIEWER.md  SECURITY.md  TriageCore_DailyDriver_Spec.docx  bandit.json  convert_icon.py  fibonacci.py  model_recommendation_matrix.md  pr-body-cr-039.md  pr-body-cr-040.md  pyproject.toml  requirements.txt  setup.py  test_bug.py  triagecore.toml
.triagecore/: lab_export.csv  predictive_model.json  work_rules.toml
benchmarks/: README.md  tasks.jsonl
docs/: antigravity_handoff.md  backlog.md  benchmark_report.md  build-review-contract.md  codex_antigravity_bridge.md  current_backlog.md  daily_driver_quickstart.md  evaluator_panel.md  evidence_schema.md  methodology.md  methodology.tex  operator_console_design.md  references.md  self_observing_harness.md  session_handoff.md  study_001_local_model_baseline.md  study_001_results.md  study_002_model_backend_comparison.md  triagedesk_gui_plan.md  ux_accessibility_recommendations.md  verification_guide.md  workspace_board.md  workspace_dashboard.md  workspace_handoff.md  workspace_now.md
examples/: audit_clearlake.py  basic_patch_loop.py  bulk_audit.py  demo_backends.py  harness_audit.py  logs_parsing.py  messy_test.py  self_audit.py  self_report.py  test_escalation.py
policies/: cybernetic_ecology_boundary.yaml
reports/: study_002_model_backend_comparison.md
schemas/: experiment_trace_record.schema.json  local_backend_probe_record.schema.json  runtime_efficiency_record.schema.json  runtime_experiment_plan.schema.json  (+3 more)
(+569 files in other folders)
