[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triagecore"
version = "0.1.0"
description = "A lightweight, local-compute-first orchestration harness for token-efficient agent workflows."
authors = [
    {name = "Corey"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
triagecore = "triage_core.cli:main"
