[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triagecore"
version = "0.1.0"
description = "A lightweight, local-compute-first orchestration harness for token-efficient agent workflows."
authors = [
    {name = "Corey"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "tomli; python_version < '3.11'",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]
ui = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "pyshortcuts>=1.9.0"
]
mobile = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0"
]

[project.scripts]
triagecore = "triage_core.cli:main"
tc = "triage_core.tc_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scratch"]
